# django-translator

./: LICENSE  MANIFEST.in  README.md  pyproject.toml  setup.cfg  setup.py
translator/: db.sqlite3  forms.py  manage.py  views.py  widgets.py
translator/core/: __init__.py  urls.py  views.py
translator/static/translator/js/: init_translator.js
translator/templates/Frontend/: Main.html
translator/templates/translator/: TranslatorAdminField.html  translator.html
translator/translator/: asgi.py  settings.py  urls.py  wsgi.py
