[metadata]
name = django-translator
version = 1.0.0
author = amirooo
author_email = amiran.amirhossien@gmail.com
maintainer = amirooo
maintainer_email = amiran.amirhossien@gmail.com
description = Translate all things in django project
long_description = file:README.rst
url = https://github.com/amiroooamiran/django-translator.git
license = MIT
keywords = django translator
classifiers =
    Development Status :: 5 - Production/Stable
    Environment :: Web Environment
    Framework :: Django
    Intended Audience :: Developers
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    Topic :: Internet :: WWW/HTTP
    Topic :: Software Development :: Libraries :: Application Frameworks
    Topic :: Software Development :: Libraries :: Python Modules

[options]
packages = find:
include_package_data = true
python_requires = >=3.9
install_requires =
    Django>=3.2